--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  http: ^1.1.0
+
   shimmer: ^3.0.0
+
+  dio: ^5.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
